More tests migrated to JUnit5